[Java] Migrate to `maven-publish` plugin and cleanup artifacts being published
The following changes were done to the generated artifacts:
- `sbe-tool`:
  * exclude Golang sources from all the jars
  * include C++ oft headers
- `sbe-all`:
  * exclude Golang sources from all the jars
  * include C++ oft headers
- `sbe-samples`:
  * include generated sources into the jars
  * include proper MANIFEST metadata

Other changes include:
- Cleanup build to use helper functions
- Configure HTTP timeouts and retries via Gradle system properties